--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@tanstack/react-query": "^5.89.0",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.544.0",
-    "next": "15.5.3",
+    "next": "15.5.4",
+    "next-intl": "^4.3.9",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "recharts": "^3.2.1",
